--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.3.0",
-    "@builder.io/qwik-city": "^1.3.0",
+    "@builder.io/qwik-city": "^1.3.1",
     "@types/eslint": "^8.44.8",
     "@types/node": "^20.10.3",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -37,5 +37,8 @@
     "undici": "^5.26.0",
     "vite": "^5.0.6",
     "vite-tsconfig-paths": "^4.2.1"
+  },
+  "dependencies": {
+    "@qwik-ui/headless": "^0.2.0"
   }
 }
