--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,8 @@
     "typeRoots": ["./node_modules/@types", "./types"]
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./*.d.ts", "./*.config.ts"]
+  "include": [
+    "src/**/*",
+    "css-modules.d.ts" // Add this line
+  ],
 }
