--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@qwik-ui/headless": "^0.2.0"
   }
 }
